--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,24 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+      <!-- Http client -->
+
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>4.0-alpha4</version>
+      </dependency>
+
+
+      <!-- Google gson -->
+
+      <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.2.4</version>
+      </dependency>
+
+
   </dependencies>
 </project>
