--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
   <version>1.0.0</version>
   <name>cover_finder</name>
   <url>http://maven.apache.org</url>
+    <distributionManagement>
+
+        <repository>
+            <id>releases</id>
+            <name>Internal Releases</name>
+            <url>http://adrian.gldos.es:8081/nexus/content/repositories/releases/</url>
+        </repository>
+
+    </distributionManagement>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -23,7 +32,6 @@
           <version>4.0-alpha4</version>
       </dependency>
 
-
       <!-- Google gson -->
 
       <dependency>
@@ -34,4 +42,20 @@
 
 
   </dependencies>
+
+    <build>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
 </project>
